--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
     <title>Aplicação</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
     </head>
     <body>
       <form method="get" action=".">
