--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
         </main>
       </form>
     </body>
-    <script src="javascript\script.js"></script>
+    <script src="script.js"></script>
     </html>
